--- a/WebUI/test.css
+++ b/WebUI/test.css
@@ -5,7 +5,7 @@
   .tabsdemoStaticTabs #tab1-content {
     background-color: #3F51B5; }
   .tabsdemoStaticTabs #tab2-content {
-    background-color: white; }
+    background-color: #FBFBFB; }
   .tabsdemoStaticTabs #tab3-content {
     background-color: white; }
   .tabsdemoStaticTabs .tabpanel-container {
@@ -13,7 +13,7 @@
     position: relative;
     background: #3F51B5;
     border: 0px solid black;
-    overflow: hidden; 
+    overflow: hidden;
     height: 600px;
 
   }
@@ -67,14 +67,43 @@
       background-color: rgba(21, 98, 29, 0.5) !important;
   }
   .slider-building{
-      padding-left: 50px;
+      /*padding-left: 20px;*/
       width: 200px;
+      margin-left: 4px;
+      margin-top: 4px;
+  }
+
+  .sectionBackground {
+      background: #f7f7f7;
+      border-radius: 3px;
+      margin: 1em;
+      padding-bottom: 10px;
+  }
+
+.ui-slider-tick {
+    position: absolute;
+    background-color: #aaa;
+    width: 2px;
+    height: 8px;
+    top: 16px;
+}
+
+  .md-slider {
+      margin-left: 19px !important;
   }
 
   .myGrid {
-    width: 500px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
   }
+
+  .gridHeaderCell {
+      background-color: red !important;
+  }
+
+.md-checkbox-no-margin {
+    margin: 0px !important;
+}
 
 .daily-profession-name {
     padding-right: 20px;
@@ -86,23 +115,164 @@
 }
 
 
-        .md-tile-left {
+.md-tile-left {
     padding-right: 20px;
     padding-left: 20px;
-        }
+}
 
-        .md-custom-green {
+.md-custom-green {
     padding-right: 20px;
     padding-left: 20px;
-            
-        }
+}
+
 .md-switch {
     min-width: 35px;
 }
 
+.switch.active {
+    margin-left: 20px !important;
+    background-color: #2FFF40 !important;
+    border: 1px solid #2FFF40 !important;
+    /*background-color: rgba(21, 98, 29, 0.5) !important;*/
+}
+
+.switch.active .switch-handle {
+    /*background-color: rgba(47, 255, 64, 0.50) !important;*/
+    border-color: #2FFF40 !important;
+}
+
+.switch {
+    margin-left: 20px !important;
+    background-color: #FF0033 !important;
+    border: 1px solid #FF0033 !important;
+}
+
+.switch .switch-handle {
+    border-color: #FF0033 !important;
+}
+
+
 .building-name {
     min-width: 100px;
 }
+.building-icon-small {
+   width: 26px;
+   height: 26px;
+   min-width: 26px;
+}
+.building-icon-small ins {
+   width: 18px;
+   height: 18px;
+   left: 4px;
+   top: 4px;
+   position: absolute;
+   z-index: 5;
+   background-repeat: no-repeat;
+   /*display: block;*/
+}
+.building-icon-small del {
+   width: 26px;
+   height: 26px;
+   background-image:url(http://wowimg.zamimg.com/images/Icon/small/border/default.png);
+   z-index: 10;
+   background-repeat: no-repeat;
+   left: 0;
+   top: 0;
+   position: absolute;
+   /*display: block;*/
+}
+.building-icon-medium {
+   width: 44px;
+   height: 44px;
+   margin-left: 3px;
+   margin-right: 3px;
+   background-image:url(http://wowimg.zamimg.com/images/Icon/medium/border/default.png);
+    position:relative;
+    z-index: 0;
+}
+.building-icon-medium ins {
+   width: 36px;
+   height: 36px;
+
+   margin-left: 4px;
+   margin-top: 4px;
+   z-index: 5;
+   background-repeat: no-repeat;
+   display: block;
+   position: absolute;
+}
+.building-icon-medium del {
+    width: 44px;
+    height: 44px;
+    /*background-image:url(http://wowimg.zamimg.com/images/Icon/medium/border/default.png);*/
+    z-index: 10;
+    background-repeat: no-repeat;
+    display: block;
+    position: absolute;
+}
+.building-icon-large {
+    width: 68px;
+    height: 68px;
+    min-width: 68px;
+    border-collapse: collapse;
+}
+.building-icon-large ins {
+    width: 56px;
+    height: 56px;
+    left: 6px;
+    top: 6px;
+    position: absolute;
+    z-index: 5;
+    background-repeat: no-repeat;
+    /*display: block;*/
+}
+.building-icon-large del {
+    width: 68px;
+    height: 68px;
+    background-image:url(http://wowimg.zamimg.com/images/Icon/large/border/default.png);
+    z-index: 10;
+    background-repeat: no-repeat;
+    left: 0;
+    top: 0;
+    position: absolute;
+    /*display: block;*/
+}
+.building-icon-small a,.building-icon-medium a,.building-icon-large a {
+    left: 3px;
+    top: 3px;
+    z-index: 20;
+    dispaly: block;
+}
+.building-icon-small a {
+    width: 20px;
+    height: 20px;
+    background: url(http://wowimg.zamimg.com/images/Icon/small/hilite/default.png) no-repeat 20px 0;
+    display: block;
+}
+
+.building-icon-medium a {
+    width: 38px;
+    height: 38px;
+    background: url(http://wowimg.zamimg.com/images/Icon/medium/hilite/default.png) no-repeat 38px 0;
+    display: block;
+}
+
+.building-icon-large a {
+    width: 62px;
+    height: 62px;
+    background: url(http://wowimg.zamimg.com/images/Icon/large/hilite/default.png) no-repeat 62px 0;
+}
+
+.building-icon-small a:hover,.building-icon-medium a:hover,.building-icon-large a:hover {
+    background-position: 0 0;
+}
+
+a:hover img.border {
+    border-color: #505050;
+    background-color: #101010;
+}
+
+
 .building-options {
 }
 
