--- a/WebUI/test.css
+++ b/WebUI/test.css
@@ -1,28 +1,31 @@
 .tabsdemoStaticTabs {
-  /*
- * Animation styles
- */ }
+    /*
+   * Animation styles
+   */ }
   .tabsdemoStaticTabs #tab1-content {
-    background-color: #3F51B5; }
+    background-color: #ffffff; }
   .tabsdemoStaticTabs #tab2-content {
-    background-color: #FBFBFB; }
-  .tabsdemoStaticTabs #tab3-content {
-    background-color: white; }
+    background-color: #ffffff; }
+.tabsdemoStaticTabs #tab3-content {
+    background-color: #ffffff; }
+.tabsdemoStaticTabs #tab4-content {
+    background-color: #ffffff; }
   .tabsdemoStaticTabs .tabpanel-container {
     display: block;
-    position: relative;
-    background: #3F51B5;
-    border: 0px solid black;
+    /*position: relative;*/
+    background: #ffffff;
+    border: 10px solid black;
     overflow: hidden;
-    height: 600px;
+    height: 100%;
 
   }
   .tabsdemoStaticTabs [role="tabpanel"] {
-    color: black;
+      background-color: #ffffff;
+    color: #000000;
     width: 100%;
-    height: 100%;
-    -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
-    transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
+    height: 90%;
+    /*-webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;*/
+    /*transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;*/
     position: absolute; }
   .tabsdemoStaticTabs [role="tabpanel"].ng-leave.ng-leave-active, .tabsdemoStaticTabs [role="tabpanel"].ng-enter {
     right: -1200px; }
@@ -61,7 +64,6 @@
       background-color: rgb(50, 185, 64) !important;
   }
   .md-thumb{
-      background-color: rgba(152, 19, 19, 0.84) !important;
   }
   .md-checked .md-thumb{
       background-color: rgba(21, 98, 29, 0.5) !important;
@@ -74,12 +76,17 @@
   }
 
   .sectionBackground {
-      background: #f7f7f7;
+      background: rgba(26, 76, 84, 0.16);
       border-radius: 3px;
       margin: 1em;
       padding-bottom: 10px;
+      min-width: 300px; /* For IE support, otherwise it creates boxes of 20px... -_-*/
+      width: 300px;
   }
 
+.md-tile-content-orders {
+    padding: 7px;
+}
 .ui-slider-tick {
     position: absolute;
     background-color: #aaa;
@@ -92,9 +99,12 @@
       margin-left: 19px !important;
   }
 
-  .myGrid {
-    width: 100%;
+  .daily-grid {
+    width: 500px;
     height: 100%;
+  }
+  .daily-grid .ui-grid-row-selected{
+      color: green;
   }
 
   .ng-scope-slider-with-icon {
@@ -135,24 +145,24 @@
 
 .switch.active {
     margin-left: 20px !important;
-    background-color: #2FFF40 !important;
-    border: 1px solid #2FFF40 !important;
+    background-color: #1fab2b !important;
+    border: 1px solid #1b9225 !important;
     /*background-color: rgba(21, 98, 29, 0.5) !important;*/
 }
 
 .switch.active .switch-handle {
     /*background-color: rgba(47, 255, 64, 0.50) !important;*/
-    border-color: #2FFF40 !important;
+    border-color: #1b9225 !important;
 }
 
 .switch {
     margin-left: 20px !important;
-    background-color: #FF0033 !important;
-    border: 1px solid #FF0033 !important;
+    background-color: #b10023 !important;
+    border: 1px solid #a70021 !important;
 }
 
 .switch .switch-handle {
-    border-color: #FF0033 !important;
+    border-color: #b60024 !important;
 }
 
 
@@ -245,7 +255,7 @@
     left: 3px;
     top: 3px;
     z-index: 20;
-    dispaly: block;
+    display: block;
 }
 .building-icon-small a {
     width: 20px;
@@ -282,4 +292,41 @@ a:hover img.border {
 
 .building-options-option {
     min-width: 150px;
+}
+
+.st-selected
+{
+    background: rgba(0, 102, 31, 0.54);
+}
+
+.tab-intro{
+    padding-left: 25px;
+    padding-bottom: 10px;
+    background-color: #ffffff;
+}
+
+.md-default-theme{
+    border: 1px;
+}
+
+.md-button.md-fab.info-button{
+    padding: 0px;
+    margin: 10px;}
+
+
+.tooltipdemoBasicUsage md-toolbar .md-toolbar-tools .md-button, .tooltipdemoBasicUsage md-toolbar .md-toolbar-tools .md-button:hover {
+    box-shadow: none;
+    border: none;
+    transform: none;
+    -webkit-transform: none; }
+.modal-info-general {
+    white-space: normal;
+    background: rgba(25, 118, 210, 0.74);
+    color: #ffffff;
+    padding: 5px;
+    border-radius: 11px;
+}
+
+.general-item-title{
+    min-width: 100px;
 }
