Stub code for missions UI

--- a/WebUI/mainUI.css
+++ b/WebUI/mainUI.css
@@ -195,3 +195,30 @@ slider div.bubble.active, [slider] div.bubble.active {
 slider div.bubble.limit, [slider] div.bubble.limit {
     color: #777;
 }
+
+
+.contentWrapper
+li {
+    height: 56px;
+    width: 60px;
+    line-height: 20px;
+    border: 1px solid #ddd;
+    padding: 3px;
+    margin-left: 10px;
+}
+
+
+.thumbnail {
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    padding-top: 0px;
+    transition: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    cursor: pointer;
+    background: rgb(182, 173, 123);
+}
+
+.thumbnail[data-drag="false"] { background: green; }
